# gps_teseo_lib

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
callbackmanager/: callbackmanager.cpp  callbackmanager.h
teseo/: teseo.cpp  teseo.h  teseo_iface.cpp
test/: test_gps_teseo_lib.cpp
